# tinytextgrad

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_prompt_optimization.ipynb  fine_tuning.ipynb
examples/prompts/: reword_question.md  text_contains_answer.md
prompts/: generate_qa_pairs.md
src/tinytextgrad/: __init__.py  llm.py  prompt.py  ttg.py
src/tinytextgrad/sys_prompts/: apply_gradient.md
sys_prompts/: cleanup_text.md  prompt_loss.md
tests/: test_ttg.py
