[project]
name = "tinytextgrad"
version = "0.2.2"
description = "Automatic prompt optimization by iteratively refining them using feedback"
authors = [{ name = "Donald Thompson", email = "witt3rd@witt3rd.com" }]
dependencies = [
    "litellm>=1.41.15",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "pydotenv>=0.0.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "ruff>=0.5.0",
    "pre-commit>=3.7.1",
    "pip>=24.1.1",
    "ipykernel>=6.29.5",
]

[tool.hatch.build]
exclude = [".rye"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tinytextgrad"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[project.urls]
GitHub = "https://github.com/witt3rd/tinytextgrad"
